metavite-K8-Deployment/auth-service-deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
     app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      
      containers:
      - name: auth
        image: jaydee47/auth-service:0.0.0.RELEASE
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app: auth-service
