metavite-K8-Deployment/carrier-service-deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: carrier-service
  namespace: metavite
  labels:
     app: carrier-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carrier-service
  template:
    metadata:
      labels:
        app: carrier-service
    spec:
      
      containers:
      - name: carrier-service
        image: jaydee47/carrier-service:0.0.0.RELEASE
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: carrier-service
  namespace: metavite
spec:
  type: ClusterIP
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
  selector:
    app: carrier-service
