metavite-K8-Deployment/chat-service-deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  namespace: metavite
  labels:
     app: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      
      containers:
      - name: chat-service
        image: jaydee47/chat-service:0.0.0.RELEASE
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: metavite
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: socketiochat
  selector:
    app: chat-service
