metavite-K8-Deployment/load-service-deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-service
  labels:
     app: load-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load-service
  template:
    metadata:
      labels:
        app: load-service
    spec:
      
      containers:
      - name: load-service
        image: jaydee47/load-service:0.0.0.RELEASE
        ports:
        - containerPort: 3007
---
apiVersion: v1
kind: Service
metadata:
  name: load-service
spec:
  type: ClusterIP
  ports:
    - port: 3007
      targetPort: 3007
      protocol: TCP
  selector:
    app: load-service
