metavite-K8-Deployment/notification-service-deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  labels:
     app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      
      containers:
      - name: notification-service
        image: jaydee47/notification-service:0.0.0.RELEASE
        ports:
        - containerPort: 4008
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP
  ports:
    - port: 4008
      targetPort: 4008
      protocol: TCP
  selector:
    app: notification-service
