metavite-K8-Deployment/payment-service-deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: metavite
  labels:
     app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      
      containers:
      - name: payment-service
        image: jaydee47/payment-service:0.0.0.RELEASE
        ports:
        - containerPort: 3009
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: metavite
spec:
  type: ClusterIP
  ports:
    - port: 3009
      targetPort: 3009
      protocol: TCP
  selector:
    app: payment-service
