metavite-K8-Deployment/security-service-deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-service
  namespace: metavite
  labels:
    app: security-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security-service
  template:
    metadata:
      labels:
        app: security-service
    spec:
     
      containers:
      - name: security-service
        image: jaydee47/security-service:0.0.0.RELEASE
        ports:
        - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: security-service
  namespace: metavite
spec:
  type: ClusterIP
  ports:
    - port: 3005
      targetPort: 3005
      protocol: TCP
  selector:
    app: security-service
