metavite-K8-Deployment/shipper-service-deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipper-service
  labels:
     app: shipper-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipper-service
  template:
    metadata:
      labels:
        app: shipper-service
    spec:
      
      containers:
      - name: shipper-service
        image: jaydee47/shipper-service:0.0.0.RELEASE
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: shipper-service
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
  selector:
    app: shipper-service
