metavite-K8-Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metavite-ingress
  namespace: metavite
  annotations:
    nginx.ingress.kubernetes.io/enable-websocket: "true"  # Enable WebSocket support
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Enforce HTTPS
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://metavite.vercel.app, http://localhost:4200, https://magnificent-gumption-08c1cb.netlify.app, wss://metavite.ddns.net"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization, X-Requested-With, Accept"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
  - host: metavite.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 4000
      - path: /socketio
        pathType: Prefix
        backend:
          service:
            name: load-service
            port:
              number: 5001
      - path: /socketiochat
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 3000        
  tls:
  - hosts:
    - metavite.ddns.net
    secretName: metavite-tls-secret  # Secret containing the TLS certificate
